--- a/public/index.html
+++ b/public/index.html
@@ -132,12 +132,28 @@
         autoConference.value = 'auto-conference';
         autoConference.textContent = 'Auto book Conference Room';
         select.appendChild(autoConference);
-        // Sort spaces by priorityOrder before populating the dropdown. Lower
-        // priority numbers should appear first. Auto-book options remain at
-        // the top.
+        /*
+         * Sort the returned spaces according to the desired grouping and
+         * priority.  The user wants the dropdown organised so that all
+         * auto‑booking options appear first (already inserted above),
+         * followed by desks, offices and then conference rooms.  Within
+         * each group the spaces should be ordered by their numeric
+         * priorityOrder (lowest first).
+         */
+        const typeOrder = { desk: 1, office: 2, conference: 3 };
         spaces
-          .slice() // make a copy to avoid mutating the original array
-          .sort((a, b) => (a.priorityOrder || 0) - (b.priorityOrder || 0))
+          .slice() // make a shallow copy to avoid mutating the original array
+          .sort((a, b) => {
+            const aType = typeOrder[a.type] || 999;
+            const bType = typeOrder[b.type] || 999;
+            if (aType !== bType) {
+              return aType - bType;
+            }
+            // Same type: sort by priorityOrder ascending
+            const aPrio = a.priorityOrder || 0;
+            const bPrio = b.priorityOrder || 0;
+            return aPrio - bPrio;
+          })
           .forEach(space => {
             const opt = document.createElement('option');
             opt.value = space.id;
