Add timezone and pagination settings

--- a/public/admin-settings.html
+++ b/public/admin-settings.html
@@ -35,6 +35,20 @@
     <div id="loginStatus" style="color:#b00;margin-top:8px;"></div>
   </div>
   <div id="app" class="hidden"><div class="card" style="display:flex;justify-content:space-between;align-items:center;"><div><button id="logoutBtn">Logout</button></div><div id="rightActions"><a href="/admin.html" style="text-decoration:none;font-size:14px;">← Back to Dashboard</a></div></div><div class="card">
+      <h2>Display Settings</h2>
+      <div class="row">
+        <label for="timezoneSelect">Time Zone:</label>
+        <select id="timezoneSelect">
+          <option value="UTC">UTC</option>
+          <option value="America/New_York">America/New_York</option>
+          <option value="Europe/London">Europe/London</option>
+          <option value="Asia/Tokyo">Asia/Tokyo</option>
+        </select>
+        <label for="pageSizeSetting">Bookings per page:</label>
+        <input id="pageSizeSetting" type="number" min="1" value="20" style="width:60px;">
+        <button id="saveSettingsBtn">Save Settings</button>
+      </div>
+    </div><div class="card">
       <h2>Spaces</h2>
       <div class="row">
         <input id="spaceName" placeholder="Name">
@@ -162,6 +176,21 @@
       opts.headers = opts.headers || {};
       opts.headers['Authorization'] = 'Bearer ' + token;
       return opts;
+    }
+
+    function loadDisplaySettings() {
+      const tzSel = document.getElementById('timezoneSelect');
+      if (tzSel) tzSel.value = localStorage.getItem('adminTimezone') || 'UTC';
+      const pageInput = document.getElementById('pageSizeSetting');
+      if (pageInput) pageInput.value = localStorage.getItem('bookingsPageSize') || '20';
+    }
+
+    function saveDisplaySettings() {
+      const tzSel = document.getElementById('timezoneSelect');
+      const pageInput = document.getElementById('pageSizeSetting');
+      if (tzSel) localStorage.setItem('adminTimezone', tzSel.value);
+      if (pageInput) localStorage.setItem('bookingsPageSize', pageInput.value || '20');
+      alert('Settings saved');
     }
 
     // Logout helper for the settings page. Without defining a logout
@@ -789,6 +818,7 @@
     document.addEventListener('DOMContentLoaded', () => {
       updateSettingsLinkIfNeeded();
       ensureSuperAdminIfNeeded();
+      loadDisplaySettings();
       // Safe bindings
       (function(){
         function on(id, event, handler){
@@ -817,6 +847,7 @@
       on('loadAnalyticsBtn','click', loadAnalytics);
       on('loadSummaryBtn','click', loadSummary);
       on('downloadCsvBtn','click', downloadCsv);
+      on('saveSettingsBtn','click', saveDisplaySettings);
 
       // Global error banner
       window.addEventListener('error', (e) => {
