--- a/public/admin-settings.html
+++ b/public/admin-settings.html
@@ -57,6 +57,9 @@
         <label for="resultsPerPage">Results per page</label>
         <input id="resultsPerPage" type="number" value="10" min="1" max="50">
       </div>
+      <div class="row">
+        <button id="saveGeneralSettingsBtn" type="button">Save</button>
+      </div>
     </div>
     <div class="card">
       <h2>Spaces</h2>
